# ping_ccx_pool_cpp

./: .cursorrules  .gitignore  AppRun  CMakeLists.txt  PingCCXPool.desktop.template  README.md  copyright  mainFrame.cpp  mainFrame.hpp  org.acktarius.PingCCXPool.appdata.xml  org.acktarius.nping.policy  ping_ccx_pool.cpp  ping_ccx_pool.hpp  ping_ccx_pool.sh  pools.json
.github/workflows/: build.yml
pears-pool-sync/: README.md  index.html  index.js  package-lock.json  package.json  pear-pool-sync.js  pear-pools.json  pools.json
